worked on making page margins more consistent; need to fix page spillover past parent background div

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,10 @@
 
 .pageBackground{
   background-attachment: fixed;
-  background-size: 'cover';
+  /* background-size: 'cover'; */
+  /* position: relative; */
 }
+
+/* .pageContents{
+  position: absolute;
+} */
