--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -7,7 +7,6 @@ img{
     height: 45%;
     background-color: #303030!important;
     display: inline-flex!important;
-    margin: 2%;
 }
 
 .links{
